# FasterSFMCode

./: BCD2D1D6N3D.cpp  BCD2D1D6N3D.h  BCD2D1DTrunc6N3D.cpp  BCD2D1DTrunc6N3D.h  CMakeLists.txt  DRAlt4N2D.cpp  DRAlt4N2D.h  README.md  activeSet2D_base.cpp  activeSet2D_base.h  activeSetChain_base.cpp  activeSetChain_base.h  activeSetTV2D.cpp  activeSetTV2D.h  activeSetTrunc2D.cpp  activeSetTrunc2D.h  activeSetTruncChain.cpp  activeSetTruncChain.h  block.h  contraction.cpp  contraction.h  contraction2D.cpp  cyclicBCD4N2D.cpp  cyclicBCD4N2D.h  cyclicBCD6N3D.cpp  cyclicBCD6N3D.h  cyclicBCDTruncTV4N2D.cpp  cyclicBCDTruncTV4N2D.h  cyclicBCDTruncTV6N3D.cpp  cyclicBCDTruncTV6N3D.h  drOptimizer4N2D.cpp  drOptimizer4N2D.h  dualFrameProjector.cpp  dualFrameProjector.h  dualLineProjector.cpp  dualLineProjector.h  dualLineProjectorAlt.cpp  dualLineProjectorAlt.h  flowNetwork.cpp  flowNetwork.h  (+47 more)
