project("FasterSFMCode")

set(CMAKE_CXX_FLAGS "-O3 -fopenmp -std=gnu++11")

add_executable(BCD6N3D mainBCD6N3D.cpp cyclicBCD6N3D.cpp dualLineProjector.cpp lineProjector.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp)
add_executable(BCDTrunc6N3D mainBCDTruncTV6N3D.cpp cyclicBCDTruncTV6N3D.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction.cpp restriction.cpp)
add_executable(BCDTrunc6N3D_var mainBCDTruncTV6N3D_var.cpp cyclicBCDTruncTV6N3D.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction.cpp restriction.cpp)
add_executable(BCDTrunc6N3D_var_sqrt mainBCDTruncTV6N3D_var_sqrt.cpp cyclicBCDTruncTV6N3D.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1D6N3D mainBCD2D1D6N3D.cpp BCD2D1D6N3D.cpp dualFrameProjector.cpp frameProjector.cpp activeSet2D_base.cpp dualLineProjector.cpp lineProjector.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp)
add_executable(BCD2D1D6N3D_acc mainBCD2D1D6N3D_acc.cpp BCD2D1D6N3D.cpp dualFrameProjector.cpp frameProjector.cpp activeSet2D_base.cpp dualLineProjector.cpp lineProjector.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp)
add_executable(BCD2D1DTrunc6N3D mainBCD2D1DTrunc6N3D.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1DTrunc6N3D_acc mainBCD2D1DTrunc6N3D_acc.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1DTrunc6N3D_var mainBCD2D1DTrunc6N3D_var.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1DTrunc6N3D_var_acc mainBCD2D1DTrunc6N3D_var_acc.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1DTrunc6N3D_var_sqrt mainBCD2D1DTrunc6N3D_var_sqrt.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)
add_executable(BCD2D1DTrunc6N3D_var_sqrt_acc mainBCD2D1DTrunc6N3D_var_sqrt_acc.cpp BCD2D1DTrunc6N3D.cpp truncDualFrameProjector.cpp truncFrameProjector.cpp activeSetTrunc2D.cpp activeSet2D_base.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax3D.cpp graph6N3D.cpp flowNetwork.cpp maxflow.cpp graph.cpp contraction2D.cpp restriction2D.cpp contraction.cpp restriction.cpp)



add_executable(BCD4N2D mainBCD4N2D.cpp cyclicBCD4N2D.cpp dualLineProjector.cpp lineProjector.cpp activeSetChain_base.cpp readDimacsMax2D.cpp graph4N2D.cpp flowNetwork.cpp maxflow.cpp graph.cpp)
add_executable(BCDTruncTV4N2D mainBCDTruncTV4N2D.cpp cyclicBCDTruncTV4N2D.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax2D.cpp graph4N2D.cpp flowNetwork.cpp maxflow.cpp graph.cpp restriction.cpp contraction.cpp)
add_executable(BCDTruncTV4N2D_var mainBCDTruncTV4N2D_var.cpp cyclicBCDTruncTV4N2D.cpp truncDualLineProjector.cpp truncLineProjector.cpp activeSetTruncChain.cpp activeSetChain_base.cpp readDimacsMax2D.cpp graph4N2D.cpp flowNetwork.cpp maxflow.cpp graph.cpp restriction.cpp contraction.cpp)
